--- a/Assets/style/style.css
+++ b/Assets/style/style.css
@@ -14,6 +14,7 @@
     height: 100vh;
     
 }
+/* -------HEADER------------- */
 /* header styling */
 .header{
     padding-right: 3%;
@@ -57,7 +58,7 @@ ul {
   li a:hover {
     background-color: #cecbcb;
   }
-  
+  /* -------RIBBON------------- */
 .ribbon{
   background: url(https://images.unsplash.com/photo-1605106325682-3482f7c1c9c4?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=663&q=80);
   background-repeat: repeat;
@@ -65,27 +66,34 @@ ul {
   /* max-height: 25vh; */
 
 }
+/* -------CONTENT------------- */
 .section-title {
    display: flex;
    justify-content: center; 
-   border-right: solid black 3px;
+   border-right: solid rgb(60, 94, 167) 3px;
   
 }
 .about{
     /* max-height: 20vh; */
     margin-top: 3vh;
 }
+/* Work section */
 .work{
     /* max-height: 20vh; */
     margin-top: 3vh;
     margin-top: 3vh;
 }
+.big{
+    width: 100%;
+    height:auto;
+}
+/* Contact section */
 .contact{
     min-height: 10vh;
-    position: absolute;
+    /* position: absolute;
     bottom: 0;
     right: 0;
-    left: 0;
+    left: 0; */
     padding-left: calc(var(--bs-gutter-x) * .5);
     padding-right: 3%;
     margin-bottom: 3vh;
