--- a/Assets/style/style.css
+++ b/Assets/style/style.css
@@ -47,7 +47,7 @@ ul {
   
   li a {
     display: block;
-    color: white;
+    color:black;
     text-align: center;
     padding: 16px;
     text-decoration: none;
@@ -168,3 +168,8 @@ h1 {
     order: 3;
 }
 
+@media screen and (max-width: 768px) {
+    .card-medium{
+        width:100% !important;
+    }
+}
